<resources>
    <string name="app_name">Quiz App</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="submit">Submit</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="option_3_description">Option 3</string>
    <string name="option_4_description">Option 4</string>


</resources>