<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toTopOf="@+id/optionsButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/optionsButtonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView">

        <Button
            android:id="@+id/option_1_button"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_columnWeight="1"
            android:text="@string/option_1"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/option_2_button"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="129dp"
            android:layout_columnWeight="1"
            android:text="@string/option_2"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/option_3_button"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_columnWeight="1"
            android:contentDescription="@string/option_3_description"
            android:text="@string/option_3"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/option_4_button"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_columnWeight="1"
            android:contentDescription="@string/option_4_description"
            android:text="@string/option_4"
            tools:ignore="VisualLintButtonSize" />



    </GridLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
